Adding generateMyStms function